# DialogueMock

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mecab  Makefile  README.md  chat.py  compose.yaml  main.py  pyproject.toml  requirements.txt  text_chat.py
notebook/: faq.ipynb  faq_exp.json  llm_faq.ipynb  training_phrases.ipynb
src/bridge/: __init__.py  asr_bridge.py  dialog_bridge.py  dialog_bridge_v1.py  dialog_bridge_v2.py  dialog_bridge_v3.py  dialog_bridge_v4.py  dialog_bridge_with_ic.py  dialog_bridge_with_streaming.py  llm_bridge.py  tts_bridge.py  vap_bridge.py
src/modules/: __init__.py
src/modules/dialogue/: _nlg.py  dialogue_system.py  dst.py  new_dst.py  new_nlg.py  nlg.py
src/modules/dialogue/utils/: __init__.py  _constants.py  _template.py  (+5 more)
src/modules/nlu/: faq.py  llm_call.py  process_text.py  process_text_.py  process_text_tmp.py  prompt.py  regex_slot_filling.py  regular_expression.py  streaming_nlu.py  validation.py
src/modules/turntaking/: __init__.py  end_of_turn_detection.py  status.py
src/modules/vad/: volume_based_vad.py
src/modules/vap/: __init__.py  encoder.py  modules.py  objective.py  objective_numpy.py  remdis_vap.py  vap.py  vap_main.py
src/utils/: __init__.py  audio.py  call_end_operation.py  call_status.py  conversation_log.py  db.py  firestore.py  gcp.py  gcs.py  kanji_reading.py  logger.py  nlu.py  project.py  recording.py  recording_simple.py  simle_recording.py  tenant.py  tts.py  twilio_account.py
tests/modules/: test_validation.py
tests/modules/vap/: test_objective.py
tests/utils/: test_firestore.py
(+2 files in other folders)
