[tool.poetry]
name = "DialogueMock"
version = "0.1.0"
description = ""
authors = ["sinhat98 <sinhat897205@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
librosa = "==0.10.2.post1"
numpy = "^1.26.0"
pandas = "==2.2.3"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
websockets = "==12.0"
python-multipart = "==0.0.12"
google-cloud-speech = "==2.26.1"
google-cloud-texttospeech = "^2.16.3"
azure-cognitiveservices-speech = "^1.41.1"
ja-ginza = "==5.2.0"
python-dotenv = "^1.0.1"
scipy = "==1.13.1"
pydub = "==0.25.1"
google-cloud-storage = "^2.18.2"
twilio = "^9.2.3"
openai = "^1.50.2"
soundfile = "^0.12.1"
g711 = "^1.6.5"
google-cloud-firestore = "^2.19.0"
firebase = "^4.0.1"
firebase-admin = "^6.5.0"

[tool.poetry.group.dev.dependencies]
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
ipykernel = "^6.29.5"
ruff = "^0.6.7"
asteroid = "^0.7.0"
janome = "^0.5.0"
rank-bm25 = "^0.2.2"
gensim = "^4.3.3"
pymysql = "^1.1.1"
asyncmy = "^0.2.9"
pyaudio = "^0.2.14"
pytest = "^8.3.3"
matplotlib = "^3.9.2"
sounddevice = "^0.5.0"


sentence-transformers = {extras = ["onnx"], version = "^3.2.0"}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cpu"
# priority = "explicit"